# bemused

./: .env  .gitignore  Makefile  README.md
.github/workflows/: rust.yml
backend/: .env  .gitignore  .ignore  Cargo.toml  Config.toml  README.md  setup.sql
backend/sled_db/: db  snap.00000000000007F0
backend/src/: configuration.rs  database.rs  db.rs  error.rs  main.rs  request.rs  response.rs  router.rs  server.rs  sled.rs
backend/src/database/: article.rs  database.rs  mod.rs  task.rs  user.rs
backend/src/model/: article.rs  mod.rs  task.rs
backend/src/serde/: article.rs  error.rs  mod.rs  task.rs
backend/src/service/: article.rs  mod.rs  task.rs  user.rs
backend/src/sled/: session.rs
conf/: Makefile  nginx.conf  systemd.service
mobile/: README.md  app  pubspec.yaml
mobile/android/: key.properties  local.properties~
mobile/android/app/: build.gradle
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/: http.dart  storage.dart
mobile/lib/model/: error.dart  task.dart
mobile/lib/route/: check_internet.dart  login.dart  signup.dart  splash.dart  task.dart  tasks.dart  test.dart
mobile/test/: widget_test.dart
scripts/: filebeat.yml  logstash.conf  nginx.conf  update.sh
server/: Cargo.toml  Config.toml
server/src/: main.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/article/: index.html
web/public/: index.html  manifest.json
web/src/: App.vue  Custom.jsx  Error.jsx  Home.jsx  Link.tsx  Login.jsx  Router.tsx  Signup.jsx  Start.jsx  client.js  client.ts  declaration.d.ts  index.html  index.tsx  reactrx.js  reactrxutils.js  router.ts  store.ts
web/src/components/: Login.vue  Signup.vue  Task.vue
web/src/core/: client.js  error.jsx  link.tsx  list.tsx  reactrx.ts  router.tsx
web/src/css/: error.scss  home.scss  index.css  login.scss  start.scss  task.scss
web/src/home/: Home.jsx  Home.tsx  Start.jsx
web/src/login/: Login.jsx  Login.tsx  Signup.jsx  Signup.tsx
web/src/models/: Article.ts  Task.ts
web/src/task/: VExpanded.tsx  VList.tsx  VMain.tsx  list.scss  list.tsx  main.ts  model.ts  task.scss  task.tsx
web/src/views/: Article.vue  Articles.vue  EditArticle.vue  (+6 more)
(+9 files in other folders)
